Completed image banner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <!--This contains the image and logo-->
         <div class="item-1">
             <div id="banner">
-                Image and logo
+                <div>
+                    <img src="/images/Cyberpunk_2077_logo.png" alt="Cyberpunk 2077 logo">
+                </div>
+                <div>
+                    <h3>New season coming soon</h3>
+                </div>
             </div>
         </div>
         <!--This contains the form-->
