Form styled and edited to match Odin task

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="item-1">
             <div id="banner">
                 <div>
-                    <img src="/images/Cyberpunk_2077_logo.png" alt="Cyberpunk 2077 logo">
+                    <img src="/images/odin-lined.png" alt="Cyberpunk 2077 logo">
                 </div>
                 <div>
                     <h3>New season coming soon</h3>
@@ -31,19 +31,36 @@
             <div id="form">
                 <form action="">
                     <fieldset>
-                    <label for="first_name">First Name</label>
-                    <input type="text" name="first_name" id="first_name">
-                    <label for="last_name">Last Name</label>
-                    <input type="text" name="last_name" id="last_name">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="phone_number">Phone Number</label>
-                    <input type="number" name="phone_number" id="phone_number">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
-                    <label for="password">Confirm Password</label>
-                    <input type="password" name="password" id="password">
-                    </fieldset>
+                        <legend><strong>Let's do this!</strong></legend>
+                            <div>
+                                <label for="first_name">First Name</label>
+                                <input type="text" name="first_name" id="first_name">
+                            </div>
+                            <div>
+                                <label for="last_name">Last Name</label>
+                                <input type="text" name="last_name" id="last_name">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div>
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <div>
+                                <label for="phone_number">Phone Number</label>
+                                <input type="number" name="phone_number" id="phone_number">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div>
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password">
+                            </div>
+                            <div>
+                                <label for="confirm_password">Confirm Password</label>
+                                <input type="confirm_password" name="confirm_password" id="confirm_password">
+                            </div>
+                        </fieldset>
                 </form>
             <!--Form submission section-->
             </div>
