--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="item-1">
             <div id="banner">
                 <div>
-                    <img src="/images/odin-lined.png" alt="Cyberpunk 2077 logo">
+                    <img src="/images/odin-lined.png" alt="Odin logo">
                 </div>
                 <div>
-                    <h3>New season coming soon</h3>
+                    <h3>Odin</h3>
                 </div>
             </div>
         </div>
@@ -24,8 +24,10 @@
         <div class="item-2">
             <!--Intro text section-->
             <div id="intro-text">
-                <h3>Coming Winter 2025</h3>
-                <p>Get ready for the latest season of Cyberpunk edgerunners coming to Netflix soon!</p>
+                <p>This is not a real online service! You know you need something
+                    like this in your life to help you realize your deepest dreams.
+                    Sign up now to get started.</p>
+                <p>You <em>know</em> you want to.</p>
             </div>
             <!--Main form-->
             <div id="form">
@@ -61,13 +63,19 @@
                                 <input type="confirm_password" name="confirm_password" id="confirm_password">
                             </div>
                         </fieldset>
+                        <fieldset id="submit">
+                            <div>
+                                <button type="submit">Create Account</button>
+                                <p>Already have an account? <a href="">Log in</a></p>
+                            </div>
+                        </fieldset>
                 </form>
             <!--Form submission section-->
             </div>
 
-            <div id="form-submit">
+            <footer id="footer">
 
-            </div>
+            </footer>
         </div>
     </div>
 </body>
